# interfacetable_v3t

./: .gitignore  AUTHORS  CHANGELOG  COPYING  InterfaceTableReset_v3t.cgi  Makefile.am  Makefile.in  README  README.md  THANKS  TODO  check_interface_table_v3.pl  check_interface_table_v3t.pl  configure  configure.ac  interfacetable_v3t.spec  subst.in
.github/workflows/: checkmarx.yml
OLD/: Makefile.in  subst
PNP/: check_interface_table_global.php  check_interface_table_port_octet.php
contrib/nagiosgrapher/: check_interface_table_port_bit.ncfg  check_interface_table_port_octet.ncfg  check_interface_table_v3t.ncfg  interfacetable_v3t_global.ncfg  interfacetable_v3t_port_bit.ncfg  interfacetable_v3t_port_octet.ncfg
contrib/pnp4nagios/: check_interface_table_global.php  check_interface_table_port.php  check_interface_table_port_bigip.php  check_interface_table_port_bit.php  check_interface_table_port_octet.php
contrib/snmpsim recorder/: CHANGELOG  README.txt
contrib/snmpsim recorder/win32/: Crypto.Cipher.AES.pyd  Crypto.Cipher.DES3.pyd  README.txt  take_full_record.bat  take_partial_record.bat  take_record.bat
contrib/support/win32/: Crypto.Cipher.DES.pyd  HOWTO.txt  take_record.bat
contrib/test/: test_snmp.pl.in  test_snmp.txt
contrib/utilities/: convert_rrd_gauge.sh  fix_rrd_peaks.sh  fix_rrd_peaks.sh.new  test_snmp.pl.in
css/: classic.css  common.css  icinga.css
doc/: 00-toc.md  01-about-the-plugin.md  02-what-s-new.md  03-installation.md  04-upgrade.md  05-plugin-usage.md  06-integration-in-nagios-icinga-interface.md  07-alerts-and-notifications.md  08-interface-statistics-and-trends.md  09-troubleshooting.md  10-annexes.md  20-supported-devices.md
etc/: Makefile.in  interfacetable_v3t.conf.httpd.in  settings.cfg-sample.in  settings.cfg.in
js/: functions.js
lib/: GeneralUtils.pm.in  Makefile.in  Settings.pm.in  SnmpUtils.pm.in
libexec/: Makefile.in  check_interface_table_v3t.pl.in
pnp6_templates/: check_interface_table_port_bit.php  check_interface_table_port_octet.php
sbin/: InterfaceTableReset_v3t.cgi  InterfaceTableReset_v3t.cgi.in  Makefile.in
share/: Makefile.in
share/css/: button.css  classic.css  icinga-alternate1.css  icinga.css  nagiosxi.css
share/js/: customsort.js  functions.js  tablesort.js  wz_tooltip.js
share/tables/: index.php
src/etc/: Makefile.in
src/etc/apache-conf.d/: Makefile.in  interfacetable_v3t.conf.in
src/lib/: Makefile.in  bsutils.pm.in  settings.pm.in
src/libexec/: Makefile.in  check_interface_table_v3t.pl
src/sbin/: Makefile.in
src/share/css/: icinga.css  nagiosxi.css.unfinished
